--- a/data/locale/es-ES.ini
+++ b/data/locale/es-ES.ini
@@ -1,34 +1,41 @@
 pluginName="Live Background Removal Lite"
 
 updateCheckerPending="Comprobando actualizaciones... <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">Descargar</a>"
-updateCheckerPluginIsLatest="El plugin está actualizado. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">Calificar este plugin</a>"
-updateCheckerUpdateAvailable="Hay una nueva versión disponible. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">Descargar</a>"
+updateCheckerPluginIsLatest="Tu complemento está actualizado. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">Valora este complemento</a>"
+updateCheckerUpdateAvailable="Hay una nueva versión del complemento disponible. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">Descargar</a>"
 updateCheckerCheckingError="Error al comprobar actualizaciones. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">Descargar</a>"
 
 showDebugWindow="Mostrar ventana de depuración"
 
-filterLevel="Nivel de filtro"
-filterLevelDefault="Por defecto"
-filterLevelPassthrough="100 - Passthrough"
-filterLevelSegmentation="200 - Segmentación IA"
+# Ajuste de línea con <br /> cada 60 caracteres aprox. No cuentes las etiquetas como caracteres y no es necesario cortar en signos de puntuación.
+filterLevelDescription="<b>Nivel de filtro:</b> Los niveles de filtro más altos proporcionan una mejor calidad de vídeo<br />aplicando técnicas de eliminación de fondo más avanzadas.<br />Selecciona un nivel más alto para mejores resultados."
+filterLevelDescription400="<b>400 - Filtro guiado:</b> Produce la máscara más nítida, pero puede causar<br />parpadeo notable. Recomendado cuando se necesita la máxima claridad de bordes<br />y se puede aceptar cierta inestabilidad en la máscara."
+filterLevelDescription500="<b>500 - Filtro promediado en el tiempo:</b> Produce la máscara más estable visualmente y<br />fácil de ver, con la carga de procesamiento más consistente y eficiente.<br />Recomendado para resultados suaves y rendimiento fiable."
+
+filterLevelDefault="Predeterminado"
+filterLevelPassthrough="100 - Paso directo"
+filterLevelSegmentation="200 - Segmentación AI"
 filterLevelMotionIntensityThresholding="300 - Umbral de intensidad de movimiento"
 filterLevelGuidedFilter="400 - Filtro guiado"
 filterLevelTimeAveragedFilter="500 - Filtro promediado en el tiempo"
 
-forceNoDelay="Forzar máscara sin demora (los FPS pueden bajar)"
+forceNoDelay="Forzar máscara sin retardo (puede bajar FPS)"
 
-motionIntensityThresholdPowDb="Umbral de intensidad de movimiento [dB]"
+# Ajuste de línea con <br /> cada 60 caracteres aprox. No cuentes las etiquetas como caracteres y no es necesario cortar en signos de puntuación.
+motionIntensityThresholdPowDbDescription="<b>Umbral de intensidad de movimiento:</b> Este parámetro establece el umbral<br />para omitir los cálculos de IA.<br />Para mayor estabilidad, ajústalo lo más bajo posible mientras la máscara<br />siga el movimiento, y normalmente unos 10 dB por encima de tu valor mínimo."
 
-timeAveragedFilteringAlpha="Velocidad de seguimiento de movimiento"
+# Ajuste de línea con <br /> cada 60 caracteres aprox. No cuentes las etiquetas como caracteres y no es necesario cortar en signos de puntuación.
+timeAveragedFilteringAlphaDescription="<b>Velocidad de seguimiento de movimiento:</b> Controla la rapidez con la que el último fotograma<br />se refleja en la máscara. Ajusta a 0.2 para minimizar el parpadeo, o<br />a 0.8 para mantener la máscara nítida. En 1.0, la reducción de parpadeo<br />se desactiva completamente."
 
-enableCenterFrame="Habilitar encuadre central (Experimental)"
+enableCenterFrame="Habilitar marco central (experimental)"
 
-advancedSettings="Ajustes avanzados"
+advancedSettings="Configuración avanzada"
 
-guidedFilterEpsPowDb="Eps de filtro guiado [dB]"
+guidedFilterEpsPowDb="Filtro guiado Eps [dB]"
 
 maskGamma="Gamma de máscara"
 maskLowerBoundAmpDb="Límite inferior de máscara [dB]"
-maskUpperBoundMarginAmpDb="Margen de límite superior de máscara [dB]"
+maskUpperBoundMarginAmpDb="Margen superior de máscara [dB]"
 
 openGlobalConfigDialog="Abrir configuración global"
+
