--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -1,34 +1,41 @@
-pluginName="Live Background Removal Lite"
+pluginName="ライブ背景除去 Lite"
 
 updateCheckerPending="アップデートを確認中... <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">ダウンロード</a>"
-updateCheckerPluginIsLatest="プラグインは最新です。<a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">評価する</a>"
-updateCheckerUpdateAvailable="新しいバージョンが利用可能です。<a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">ダウンロード</a>"
-updateCheckerCheckingError="アップデート確認中にエラーが発生しました。<a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">ダウンロード</a>"
+updateCheckerPluginIsLatest="プラグインは最新です。<a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">このプラグインを評価</a>"
+updateCheckerUpdateAvailable="新しいバージョンのプラグインが利用可能です。<a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">ダウンロード</a>"
+updateCheckerCheckingError="アップデートの確認中にエラーが発生しました。<a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">ダウンロード</a>"
 
 showDebugWindow="デバッグウィンドウを表示"
 
-filterLevel="フィルタレベル"
+# 60文字程度で<br />による折り返し。タグは文字数に含めず、句読点で改行する必要はありません。
+filterLevelDescription="<b>フィルターレベル:</b> 高いフィルターレベルでは、より高度な背景除去技術を適用し、<br />ビデオ品質が向上します。より良い結果を得るには高いレベルを選択してください。"
+filterLevelDescription400="<b>400 - ガイドフィルター:</b> 最もシャープなマスクを生成しますが、<br />ちらつきが目立つ場合があります。最大限のエッジの鮮明さが必要で、<br />多少のマスクの不安定さを許容できる場合に推奨されます。"
+filterLevelDescription500="<b>500 - 時間平均フィルター:</b> 最も視覚的に安定した、<br />見やすいマスクを生成し、処理負荷も安定しています。<br />滑らかな結果と信頼性の高いパフォーマンスを求める場合に推奨されます。"
+
 filterLevelDefault="デフォルト"
 filterLevelPassthrough="100 - パススルー"
-filterLevelSegmentation="200 - AI セグメンテーション"
-filterLevelMotionIntensityThresholding="300 - モーション強度しきい値"
-filterLevelGuidedFilter="400 - ガイデッドフィルタ"
-filterLevelTimeAveragedFilter="500 - 時間平均フィルタ"
+filterLevelSegmentation="200 - AIセグメンテーション"
+filterLevelMotionIntensityThresholding="300 - 動き強度しきい値"
+filterLevelGuidedFilter="400 - ガイドフィルター"
+filterLevelTimeAveragedFilter="500 - 時間平均フィルター"
 
-forceNoDelay="遅延なしでマスクを強制 (FPSが低下する可能性があります)"
+forceNoDelay="遅延なしでマスクを強制 (FPSが低下する場合あり)"
 
-motionIntensityThresholdPowDb="モーション強度しきい値 [dB]"
+# 60文字程度で<br />による折り返し。タグは文字数に含めず、句読点で改行する必要はありません。
+motionIntensityThresholdPowDbDescription="<b>動き強度しきい値:</b> このパラメータはAI計算をスキップする<br />しきい値を設定します。<br />安定性を高めるには、マスクが動きについていく範囲で<br />できるだけ低く設定し、通常は最小値より約10dB高くします。"
 
-timeAveragedFilteringAlpha="モーショントラッキング速度"
+# 60文字程度で<br />による折り返し。タグは文字数に含めず、句読点で改行する必要はありません。
+timeAveragedFilteringAlphaDescription="<b>動き追従速度:</b> 最新フレームがマスクに反映される速さを制御します。<br />ちらつきを最小限にするには0.2程度、マスクをシャープに保つには0.8程度に設定します。<br />1.0ではちらつき低減が完全に無効になります。"
 
-enableCenterFrame="センターフレームを有効にする (実験的)"
+enableCenterFrame="中央フレームを有効化 (実験的)"
 
 advancedSettings="詳細設定"
 
-guidedFilterEpsPowDb="ガイデッドフィルタ Eps [dB]"
+guidedFilterEpsPowDb="ガイドフィルター Eps [dB]"
 
 maskGamma="マスクガンマ"
 maskLowerBoundAmpDb="マスク下限 [dB]"
 maskUpperBoundMarginAmpDb="マスク上限マージン [dB]"
 
 openGlobalConfigDialog="グローバル設定を開く"
+
