--- a/data/locale/pt-BR.ini
+++ b/data/locale/pt-BR.ini
@@ -1,34 +1,41 @@
 pluginName="Live Background Removal Lite"
 
-updateCheckerPending="Verificando atualizações... <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/">Baixar</a>"
-updateCheckerPluginIsLatest="Seu plugin está atualizado. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/">Avalie este plugin</a>"
-updateCheckerUpdateAvailable="Uma nova versão do plugin está disponível. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/">Baixar</a>"
-updateCheckerCheckingError="Erro ao verificar atualizações. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/">Baixar</a>"
+updateCheckerPending="Verificando atualizações... <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">Baixar</a>"
+updateCheckerPluginIsLatest="Seu plugin está atualizado. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">Avalie este plugin</a>"
+updateCheckerUpdateAvailable="Uma nova versão do plugin está disponível. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">Baixar</a>"
+updateCheckerCheckingError="Erro ao verificar atualizações. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">Baixar</a>"
 
 showDebugWindow="Mostrar janela de depuração"
 
-filterLevel="Nível do filtro"
+# Quebra de linha com <br /> a cada 60 caracteres aprox. Não conte as tags como caracteres e não precisa quebrar em pontuações.
+filterLevelDescription="<b>Nível de filtro:</b> Níveis de filtro mais altos fornecem melhor qualidade de vídeo<br />aplicando técnicas mais avançadas de remoção de fundo.<br />Selecione um nível mais alto para melhores resultados."
+filterLevelDescription400="<b>400 - Filtro Guiado:</b> Produz a máscara mais nítida, mas pode causar<br />cintilação perceptível. Recomendado quando a máxima nitidez das bordas é necessária<br />e alguma instabilidade da máscara é aceitável."
+filterLevelDescription500="<b>500 - Filtro Média Temporal:</b> Produz a máscara visualmente mais estável e<br />fácil de visualizar, com carga de processamento mais consistente e eficiente.<br />Recomendado para resultados suaves e desempenho confiável."
+
 filterLevelDefault="Padrão"
-filterLevelPassthrough="100 - Passagem direta (Passthrough)"
-filterLevelSegmentation="200 - Segmentação por IA"
-filterLevelMotionIntensityThresholding="300 - Limiar de intensidade de movimento"
-filterLevelGuidedFilter="400 - Filtro guiado"
-filterLevelTimeAveragedFilter="500 - Filtro de média temporal"
+filterLevelPassthrough="100 - Passagem Direta"
+filterLevelSegmentation="200 - Segmentação AI"
+filterLevelMotionIntensityThresholding="300 - Limite de Intensidade de Movimento"
+filterLevelGuidedFilter="400 - Filtro Guiado"
+filterLevelTimeAveragedFilter="500 - Filtro Média Temporal"
 
 forceNoDelay="Forçar máscara sem atraso (FPS pode cair)"
 
-motionIntensityThresholdPowDb="Limiar de intensidade de movimento [dB]"
+# Quebra de linha com <br /> a cada 60 caracteres aprox. Não conte as tags como caracteres e não precisa quebrar em pontuações.
+motionIntensityThresholdPowDbDescription="<b>Limite de Intensidade de Movimento:</b> Este parâmetro define o limite<br />para pular cálculos de IA.<br />Para maior estabilidade, defina o mais baixo possível enquanto a máscara ainda<br />segue o movimento, normalmente cerca de 10 dB acima do seu valor mínimo."
 
-timeAveragedFilteringAlpha="Velocidade de rastreamento de movimento"
+# Quebra de linha com <br /> a cada 60 caracteres aprox. Não conte as tags como caracteres e não precisa quebrar em pontuações.
+timeAveragedFilteringAlphaDescription="<b>Velocidade de Rastreamento de Movimento:</b> Controla a rapidez com que o último quadro<br />é refletido na máscara. Defina em torno de 0,2 para minimizar a cintilação, ou<br />em torno de 0,8 para manter a máscara nítida. Em 1,0, a redução de cintilação<br />é completamente desativada."
 
-enableCenterFrame="Habilitar quadro central (Experimental)"
+enableCenterFrame="Ativar quadro central (experimental)"
 
 advancedSettings="Configurações avançadas"
 
-guidedFilterEpsPowDb="Eps do filtro guiado [dB]"
+guidedFilterEpsPowDb="Filtro Guiado Eps [dB]"
 
 maskGamma="Gama da máscara"
 maskLowerBoundAmpDb="Limite inferior da máscara [dB]"
-maskUpperBoundMarginAmpDb="Margem do limite superior da máscara [dB]"
+maskUpperBoundMarginAmpDb="Margem superior da máscara [dB]"
 
 openGlobalConfigDialog="Abrir configuração global"
+
