--- a/data/locale/ru-RU.ini
+++ b/data/locale/ru-RU.ini
@@ -1,34 +1,41 @@
 pluginName="Live Background Removal Lite"
 
-updateCheckerPending="Проверка обновлений... <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/">Скачать</a>"
-updateCheckerPluginIsLatest="Плагин обновлен. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/">Оценить плагин</a>"
-updateCheckerUpdateAvailable="Доступна новая версия плагина. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/">Скачать</a>"
-updateCheckerCheckingError="Ошибка при проверке обновлений. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/">Скачать</a>"
+updateCheckerPending="Проверка обновлений... <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">Скачать</a>"
+updateCheckerPluginIsLatest="Ваш плагин обновлён. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">Оценить этот плагин</a>"
+updateCheckerUpdateAvailable="Доступна новая версия плагина. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">Скачать</a>"
+updateCheckerCheckingError="Ошибка при проверке обновлений. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">Скачать</a>"
 
 showDebugWindow="Показать окно отладки"
 
-filterLevel="Уровень фильтра"
+# Перенос строки с помощью <br /> примерно каждые 60 символов. Теги не учитываются в подсчёте символов, перенос по знакам препинания не требуется.
+filterLevelDescription="<b>Уровень фильтра:</b> Более высокие уровни фильтра обеспечивают лучшее качество видео<br />благодаря применению более продвинутых методов удаления фона.<br />Выберите более высокий уровень для лучших результатов."
+filterLevelDescription400="<b>400 - Направленный фильтр:</b> Создаёт самую чёткую маску, но может вызывать<br />заметное мерцание. Рекомендуется, когда требуется максимальная чёткость краёв<br />и допустима некоторая нестабильность маски."
+filterLevelDescription500="<b>500 - Временной усреднённый фильтр:</b> Создаёт наиболее визуально стабильную<br />и удобную для просмотра маску, с самой стабильной и эффективной нагрузкой.<br />Рекомендуется для плавных результатов и надёжной работы."
+
 filterLevelDefault="По умолчанию"
-filterLevelPassthrough="100 - Пропуск (Passthrough)"
-filterLevelSegmentation="200 - ИИ сегментация"
+filterLevelPassthrough="100 - Без изменений"
+filterLevelSegmentation="200 - AI-сегментация"
 filterLevelMotionIntensityThresholding="300 - Порог интенсивности движения"
-filterLevelGuidedFilter="400 - Управляемый фильтр (Guided Filter)"
-filterLevelTimeAveragedFilter="500 - Усредненный по времени фильтр"
+filterLevelGuidedFilter="400 - Направленный фильтр"
+filterLevelTimeAveragedFilter="500 - Временной усреднённый фильтр"
 
-forceNoDelay="Принудительная маска без задержки (FPS может упасть)"
+forceNoDelay="Принудительная маска без задержки (FPS может снизиться)"
 
-motionIntensityThresholdPowDb="Порог интенсивности движения [дБ]"
+# Перенос строки с помощью <br /> примерно каждые 60 символов. Теги не учитываются в подсчёте символов, перенос по знакам препинания не требуется.
+motionIntensityThresholdPowDbDescription="<b>Порог интенсивности движения:</b> Этот параметр задаёт порог<br />для пропуска AI-вычислений.<br />Для наибольшей стабильности установите как можно ниже, пока маска<br />следует за движением, обычно примерно на 10 дБ выше минимального значения."
 
-timeAveragedFilteringAlpha="Скорость отслеживания движения"
+# Перенос строки с помощью <br /> примерно каждые 60 символов. Теги не учитываются в подсчёте символов, перенос по знакам препинания не требуется.
+timeAveragedFilteringAlphaDescription="<b>Скорость отслеживания движения:</b> Управляет тем, как быстро последний кадр<br />отражается в маске. Установите около 0.2 для минимизации мерцания или<br />около 0.8 для сохранения чёткости маски. При 1.0 подавление мерцания<br />полностью отключено."
 
-enableCenterFrame="Включить центрирование кадра (Экспериментально)"
+enableCenterFrame="Включить центральный кадр (экспериментально)"
 
 advancedSettings="Расширенные настройки"
 
-guidedFilterEpsPowDb="Eps управляемого фильтра [дБ]"
+guidedFilterEpsPowDb="Направленный фильтр Eps [дБ]"
 
 maskGamma="Гамма маски"
 maskLowerBoundAmpDb="Нижний предел маски [дБ]"
-maskUpperBoundMarginAmpDb="Запас верхнего предела маски [дБ]"
+maskUpperBoundMarginAmpDb="Верхний запас маски [дБ]"
 
 openGlobalConfigDialog="Открыть глобальные настройки"
+
