--- a/data/locale/zh-TW.ini
+++ b/data/locale/zh-TW.ini
@@ -1,34 +1,41 @@
-pluginName="Live Background Removal Lite"
+pluginName="即時背景去除精簡版"
 
 updateCheckerPending="正在檢查更新... <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">下載</a>"
-updateCheckerPluginIsLatest="您的外掛程式已是最新版本。<a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">為此外掛程式評分</a>"
-updateCheckerUpdateAvailable="有新版本的外掛程式可用。<a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">下載</a>"
+updateCheckerPluginIsLatest="您的插件已是最新。<a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">為此插件評分</a>"
+updateCheckerUpdateAvailable="有新版本插件可用。<a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">下載</a>"
 updateCheckerCheckingError="檢查更新時發生錯誤。<a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">下載</a>"
 
 showDebugWindow="顯示除錯視窗"
 
-filterLevel="濾鏡等級"
+# 每行約60字用<br />換行。標籤不計入字數，無需在標點處換行。
+filterLevelDescription="<b>濾鏡等級：</b>更高的濾鏡等級會套用更先進的背景去除技術，<br />提升影片品質。選擇更高等級可獲得更佳效果。"
+filterLevelDescription400="<b>400 - 引導濾鏡：</b>產生最銳利的遮罩，但可能會有<br />明顯閃爍。當需要最大邊緣清晰度且可接受部分遮罩不穩定時建議使用。"
+filterLevelDescription500="<b>500 - 時域平均濾鏡：</b>產生最穩定、<br />最易觀看的遮罩，處理負載也最穩定。建議追求平滑效果與穩定效能時使用。"
+
 filterLevelDefault="預設"
-filterLevelPassthrough="100 - 直通 (Passthrough)"
-filterLevelSegmentation="200 - AI 分割"
-filterLevelMotionIntensityThresholding="300 - 動作強度閾值"
-filterLevelGuidedFilter="400 - 導向濾波 (Guided Filter)"
-filterLevelTimeAveragedFilter="500 - 時間平均濾波"
+filterLevelPassthrough="100 - 直通"
+filterLevelSegmentation="200 - AI分割"
+filterLevelMotionIntensityThresholding="300 - 動作強度門檻"
+filterLevelGuidedFilter="400 - 引導濾鏡"
+filterLevelTimeAveragedFilter="500 - 時域平均濾鏡"
 
-forceNoDelay="強制無延遲遮罩 (FPS可能會下降)"
+forceNoDelay="強制無延遲遮罩（可能降低FPS）"
 
-motionIntensityThresholdPowDb="動作強度閾值 [dB]"
+# 每行約60字用<br />換行。標籤不計入字數，無需在標點處換行。
+motionIntensityThresholdPowDbDescription="<b>動作強度門檻：</b>此參數設定跳過AI計算的<br />門檻。為獲得最佳穩定性，應在遮罩仍能跟隨動作的前提下盡量調低，<br />通常比最小值高約10 dB。"
 
-timeAveragedFilteringAlpha="動作追蹤速度"
+# 每行約60字用<br />換行。標籤不計入字數，無需在標點處換行。
+timeAveragedFilteringAlphaDescription="<b>動作追蹤速度：</b>控制最新畫面在遮罩中反映的速度。<br />設為0.2可最小化閃爍，設為0.8可保持遮罩銳利。1.0時完全關閉閃爍抑制。"
 
-enableCenterFrame="啟用中心畫格 (實驗性)"
+enableCenterFrame="啟用中央畫面（實驗性）"
 
 advancedSettings="進階設定"
 
-guidedFilterEpsPowDb="導向濾波 Eps [dB]"
+guidedFilterEpsPowDb="引導濾鏡 Eps [dB]"
 
-maskGamma="遮罩 Gamma"
+maskGamma="遮罩伽瑪"
 maskLowerBoundAmpDb="遮罩下限 [dB]"
-maskUpperBoundMarginAmpDb="遮罩上限邊距 [dB]"
+maskUpperBoundMarginAmpDb="遮罩上限裕度 [dB]"
 
 openGlobalConfigDialog="開啟全域設定"
+
