Unify plugin name across all locale files
Changed the pluginName in Japanese, Korean, Simplified Chinese, and Traditional Chinese locale files to 'Live Background Removal Lite' for consistency across languages.

--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -1,4 +1,4 @@
-pluginName="ライブ背景除去 Lite"
+pluginName="Live Background Removal Lite"
 
 updateCheckerPending="アップデートを確認中... <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">ダウンロード</a>"
 updateCheckerPluginIsLatest="プラグインは最新です。<a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">このプラグインを評価</a>"
