--- a/data/locale/ko-KR.ini
+++ b/data/locale/ko-KR.ini
@@ -1,4 +1,4 @@
-pluginName="라이브 배경 제거 라이트"
+pluginName="Live Background Removal Lite"
 
 updateCheckerPending="업데이트 확인 중... <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">다운로드</a>"
 updateCheckerPluginIsLatest="플러그인이 최신입니다. <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">이 플러그인 평가하기</a>"
