--- a/data/locale/zh-CN.ini
+++ b/data/locale/zh-CN.ini
@@ -1,4 +1,4 @@
-pluginName="实时背景移除精简版"
+pluginName="Live Background Removal Lite"
 
 updateCheckerPending="正在检查更新... <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">下载</a>"
 updateCheckerPluginIsLatest="您的插件已是最新。<a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">为此插件评分</a>"
