--- a/data/locale/zh-TW.ini
+++ b/data/locale/zh-TW.ini
@@ -1,4 +1,4 @@
-pluginName="即時背景去除精簡版"
+pluginName="Live Background Removal Lite"
 
 updateCheckerPending="正在檢查更新... <a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">下載</a>"
 updateCheckerPluginIsLatest="您的插件已是最新。<a href=\"https://kaito-tokyo.github.io/live-backgroundremoval-lite/\">為此插件評分</a>"
