Add blur size property to filter settings
Introduces a new 'blurSize' property to the filter, including localization for multiple languages, UI slider, and property handling in the filter context and rendering context. This allows users to control the degree of blur applied, with an option to disable blur by setting the value to 1.

--- a/data/locale/de-DE.ini
+++ b/data/locale/de-DE.ini
@@ -25,6 +25,8 @@ motionIntensityThresholdPowDbDescription="<b>Bewegungsintensitätsschwelle:</b> 
 # Zeilenumbruch mit <br /> nach ca. 60 Zeichen. Tags nicht mitzählen, kein Umbruch an Satzzeichen nötig.
 timeAveragedFilteringAlphaDescription="<b>Bewegungsverfolgungsgeschwindigkeit:</b> Steuert, wie schnell das aktuelle Bild<br />in die Maske einfließt. Für minimale Flackern auf ca. 0,2 stellen,<br />für scharfe Maske auf ca. 0,8. Bei 1,0 ist die Flackerreduktion<br />vollständig deaktiviert."
 
+blurSizeDescription="<b>Unschärfegröße:</b> Grad der Unschärfe. Auf 1 setzen, um Unschärfe zu deaktivieren."
+
 enableCenterFrame="Zentralen Frame aktivieren (experimentell)"
 
 advancedSettings="Erweiterte Einstellungen"
