--- a/data/locale/fr-FR.ini
+++ b/data/locale/fr-FR.ini
@@ -29,7 +29,9 @@ enableCenterFrame="Activer le cadre central (expérimental)"
 
 advancedSettings="Paramètres avancés"
 
+
 guidedFilterEpsPowDb="Filtre guidé Eps [dB]"
+blurSizeDescription="<b>Taille du flou :</b> Degré de flou. Réglez sur 1 pour désactiver le flou."
 
 maskGamma="Gamma du masque"
 maskLowerBoundAmpDb="Limite inférieure du masque [dB]"
