--- a/data/locale/ja-JP.ini
+++ b/data/locale/ja-JP.ini
@@ -29,7 +29,9 @@ enableCenterFrame="中央フレームを有効化 (実験的)"
 
 advancedSettings="詳細設定"
 
+
 guidedFilterEpsPowDb="ガイドフィルター Eps [dB]"
+blurSizeDescription="<b>ぼかしサイズ:</b> ぼかしの度合い。1に設定するとぼかしを無効化します。"
 
 maskGamma="マスクガンマ"
 maskLowerBoundAmpDb="マスク下限 [dB]"
