--- a/data/locale/pt-BR.ini
+++ b/data/locale/pt-BR.ini
@@ -25,6 +25,8 @@ motionIntensityThresholdPowDbDescription="<b>Limite de Intensidade de Movimento:
 # Quebra de linha com <br /> a cada 60 caracteres aprox. Não conte as tags como caracteres e não precisa quebrar em pontuações.
 timeAveragedFilteringAlphaDescription="<b>Velocidade de Rastreamento de Movimento:</b> Controla a rapidez com que o último quadro<br />é refletido na máscara. Defina em torno de 0,2 para minimizar a cintilação, ou<br />em torno de 0,8 para manter a máscara nítida. Em 1,0, a redução de cintilação<br />é completamente desativada."
 
+blurSizeDescription="<b>Tamanho do desfoque:</b> Grau de desfoque. Defina como 1 para desativar o desfoque."
+
 enableCenterFrame="Ativar quadro central (experimental)"
 
 advancedSettings="Configurações avançadas"
