--- a/data/locale/ru-RU.ini
+++ b/data/locale/ru-RU.ini
@@ -25,6 +25,8 @@ motionIntensityThresholdPowDbDescription="<b>Порог интенсивност
 # Перенос строки с помощью <br /> примерно каждые 60 символов. Теги не учитываются в подсчёте символов, перенос по знакам препинания не требуется.
 timeAveragedFilteringAlphaDescription="<b>Скорость отслеживания движения:</b> Управляет тем, как быстро последний кадр<br />отражается в маске. Установите около 0.2 для минимизации мерцания или<br />около 0.8 для сохранения чёткости маски. При 1.0 подавление мерцания<br />полностью отключено."
 
+blurSizeDescription="<b>Размер размытия:</b> Степень размытия. Установите 1, чтобы отключить размытие."
+
 enableCenterFrame="Включить центральный кадр (экспериментально)"
 
 advancedSettings="Расширенные настройки"
