--- a/data/locale/en-US.ini
+++ b/data/locale/en-US.ini
@@ -25,6 +25,8 @@ motionIntensityThresholdPowDbDescription="<b>Motion Intensity Threshold:</b> Thi
 # Word-wrap by <br /> approximately every 60 letters. Do not count tags as letters and don't need to break on punctuations.
 timeAveragedFilteringAlphaDescription="<b>Motion Tracking Speed:</b> Controls how quickly the latest frame<br />is reflected in the mask. Set to around 0.2 to minimize flicker, or<br />around 0.8 to keep the mask sharp. At 1.0, flicker reduction is<br />completely disabled."
 
+blurSizeDescription="<b>Blur Size:</b> Degrees of blurriness. Set 0 to disable blur."
+
 enableCenterFrame="Enable Center Frame (Experimental)"
 
 advancedSettings="Advanced Settings"
