Fix encoding typo in French and Japanese locale files
Removed an extraneous character at the end of the 'advancedSettings' translation in both fr-FR.ini and ja-JP.ini to correct encoding issues.

--- a/data/locale/fr-FR.ini
+++ b/data/locale/fr-FR.ini
@@ -29,7 +29,7 @@ blurSizeDescription="<b>Taille du flou :</b> Degré de flou. Réglez sur 0 pour 
 
 enableCenterFrame="Activer le cadre central (expérimental)"
 
-advancedSettings="Paramètres avancés"å
+advancedSettings="Paramètres avancés"
 
 guidedFilterEpsPowDb="Filtre guidé Eps [dB]"
 
